Attempt to fix background sizing on mobile version

--- a/styles/main.css
+++ b/styles/main.css
@@ -9,8 +9,13 @@ body {
                                       background-color: rgb(235, 235, 235);
                                       background-size: cover;
                                       background-position: 44.1379% 0%;*/
-  background-image: url("/images/Hestia_dark.jpg");
-  background-color: black;
+  background: #000 url("/images/Hestia_dark.jpg") !important;
+  background-repeat: no-repeat !important;
+    background-position: 50% 50% !important;
+    background-attachment: fixed !important;
+    background-color: transparent !important;
+    background-size: cover !important;
+  /*background-color: black;
   background-position: top center;
   background-size: cover;
   background-attachment: fixed;
@@ -19,7 +24,7 @@ body {
   min-width: 100%;
   width: 100%;
   min-height: 100%;
-  height: 100%;
+  height: 100%;*/
   z-index: 1;
   font-family: Didot !important;
 }
